fix spacing issue between words

--- a/main.css
+++ b/main.css
@@ -19,8 +19,8 @@ h1, h2 {
 
 h2 {
   display: none;
-  padding-right: 18px;
-  padding-left: 18px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 button {
